# diskscour

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
assets/: icon.icns
scripts/: bundle-mac.sh
src/: caches.rs  main.rs  scan.rs  treemap.rs  util.rs
